--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="js/bundle.js"></script>
   </body>
 </html>
